manifest/frontend-service.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/cfp-project-0001/frontend
        imagePullPolicy: Always
        volumeMounts:
          - name: chatapp
            mountPath: /etc/nginx/conf.d/
            readOnly: true
        ports:
        - containerPort: 80
      volumes:
      - name: chatapp
        configMap:
          name: configmap


---
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
    - name: frontend
      port: 80
      targetPort: 80
